# iut_market_oracle

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  TASKS.md  main.py  pyproject.toml  run_api.py  schemas.py
.claude/: settings.json
.claude/audit/: rotation-policy.json
.claude/commands/: ci-guard.md  plan-change.md  release-check.md  report-check.md  update-classification.md  (+1 more)
configs/: entropy_thresholds.yaml  priors.yaml  twin_defaults.yaml  valuation.yaml
db/: database.py  models.py
docs/: failure_modes.md
experiments/: registry.md
iut/: entropy.py  oracle.py  pipeline.py  resonance.py  screener.py
notes/: review_checklist.md
routers/: analysis.py  results.py
src/: report.py  schemas.py
static/: style.css
templates/: base.html  index.html  result.html  results_list.html
tests/: test_api_matroid.py  test_api_twin_regime.py  test_bayesian.py  test_bayesian_network.py  test_dcf.py  test_entropy.py  test_entropy_wasserstein.py  test_exit.py  test_experiments.py  test_gnss_multi_sensor_sim.py  test_gnss_spoof_sim.py  test_graph.py  test_graph_rmt.py  test_huh_twin_bayes_engine.py  test_huh_twin_config_runner.py  test_huh_twin_report.py  test_huh_twin_reporting.py  test_huh_twin_sensitivity.py  test_huh_twin_sensitivity_smoke.py  test_huh_twin_skill_classification.py  test_huh_twin_skill_graph.py  test_huh_twin_valuation.py  test_matroid_log_concavity.py  test_model_generator.py  test_model_recommender.py  test_model_registry.py  test_openapi_examples.py  test_regime_simulator.py  test_report.py  test_schemas.py  test_twin.py  test_valuation.py
(+77 files in other folders)
